# cvmfs-cp

./: CMakeLists.txt  README.md  config_cmake.h.in
cmake/: FindLibcvmfs.cmake
config/: cvmfs-cp.spec
src/: cvmfs_cp.cc
